--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "declaration": true,
     // "lib": ["ES2020"],
     "moduleResolution": "node",
-    "rootDir": "./src",
-    "outDir": "./api"
-  }
+    "outDir": "./dist"
+  },
+  "include": ["src", "api"]
 }
